force-app/main/default/objects/Sector_Location_Master__c/Sector_Location_Master__c.object-meta.xml
<CustomObject>
    <label>Sector Location Master</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Sector Location Master  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sector Location Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>