force-app/main/default/objects/Sector_Location_Master__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>