force-app/main/default/objects/Sector_Location_Master__c/fields/Max_Yield__c.field-meta.xml
<CustomField>
    <fullName>Max_Yield__c</fullName>
    <label>Max IRF Yield</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>