force-app/main/default/objects/Sector_Location_Master__c/fields/Min_ASF_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_ASF_Amount__c</fullName>
    <label>Min ASF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>