force-app/main/default/objects/Sector_Location_Master__c/fields/Min_Yield__c.field-meta.xml
<CustomField>
    <fullName>Min_Yield__c</fullName>
    <label>Min IRF Yield</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>