force-app/main/default/objects/Sector_Location_Master__c/fields/SL_NO__c.field-meta.xml
<CustomField>
    <fullName>SL_NO__c</fullName>
    <label>SL NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>