force-app/main/default/objects/Sector_Location_Master__c/fields/Target_ASF_Increase__c.field-meta.xml
<CustomField>
    <fullName>Target_ASF_Increase__c</fullName>
    <label>Target % ASF Increase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>