force-app/main/default/objects/Sector_Location_Master__c/fields/Target_of_increase__c.field-meta.xml
<CustomField>
    <fullName>Target_of_increase__c</fullName>
    <label>Target % IRF increase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>