force-app/main/default/objects/Sector_Location_Master__c/fields/Valid_Value__c.field-meta.xml
<CustomField>
    <fullName>Valid_Value__c</fullName>
    <label>Valid Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>