force-app/main/default/objects/Sector_Location_Master__c/recordTypes/Location_Master.recordType-meta.xml
<RecordType>
    <fullName>Location_Master</fullName>
    <active>true</active>
    <label>Location Master</label>
</RecordType>