force-app/main/default/objects/Sector_Location_Master__c/recordTypes/Sector_Master.recordType-meta.xml
<RecordType>
    <fullName>Sector_Master</fullName>
    <active>true</active>
    <label>Sector Master</label>
</RecordType>