force-app/main/default/objects/Sector_Location_Master__c/recordTypes/SF_Master.recordType-meta.xml
<RecordType>
    <fullName>SF_Master</fullName>
    <active>true</active>
    <label>SF Master</label>
</RecordType>