force-app/main/default/objects/Sector_Location_Master__c/listViews/Sector_Master.listView-meta.xml
<ListView>
    <fullName>Sector_Master</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Instrument__c</columns>
    <columns>Sector__c</columns>
    <columns>Valid_Value__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sector_Location_Master__c.Sector_Master</value>
    </filters>
    <label>Sector Master</label>
</ListView>